cluster/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: py-toys
  namespace: py-toys
  labels:
    service: py-toys
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8000
  selector:
    app: py-toys
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
