cluster/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/issuer: issuer-prod
    kubernetes.io/ingress.class: traefik
  generation: 1
  name: py-toys
  namespace: py-toys
  labels:
    services: py-toys
spec:
  rules:
  - host: toys.pandas.run
    http:
      paths:
      - backend:
          service:
            name: py-toys
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - toys.pandas.run
    secretName: pytoys-tls
